--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "mongoose": "^5.10.6",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "react-paypal-button-v2": "^2.6.3"
   },
   "devDependencies": {
     "concurrently": "^7.5.0",
